<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">My Dic</string>

    <string name="my_translations">My Translations</string>
    <string name="add_translation">Add translation</string>
    <string name="search">Search</string>
    <string name="delete_translation_snackbar">Translation deleted</string>
    <string name="undo">Undo</string>
    <string name="no_translations_saved">There are no saved translations. Click Add button to translate.</string>
    <string name="no_translations_filter">No translations found matching the filter.</string>
    <string name="no_translations_search">No translations found matching the search (search performs according to source text).</string>
    <string name="missing_translation">Translation is not available!</string>

    <string name="source_text">Source text</string>
    <string name="translation_text">Translation text</string>
    <string name="transliteration">Transliteration</string>

    <string name="organize_translations">Organize translations</string>
    <string name="sort_by">Sort by</string>
    <string name="date">Date</string>
    <string name="descending">Descending</string>
    <string name="filter_by">Filter by</string>
    <string name="source_language">Source language</string>
    <string name="target_language">Target language</string>
    <string name="reset">Reset</string>

    <string name="translate">Translate</string>
    <string name="hint_etSource">Text to translate</string>
    <string name="language_from">From</string>
    <string name="language_to">To</string>
    <string name="btn_swap_languages">Swap languages</string>
    <string name="btn_translate">Translate</string>
    <string name="empty_source_snackbar">Text to translate field can\'t be empty.</string>

    <string name="translation_details">Translation Details</string>
    <string name="main_translation">Main translation</string>
    <string name="language_unknown_with_code">Unknown (%1$s)</string>
    <string name="alternatives">Alternative translations</string>
    <string name="definitions">Definitions</string>
    <string name="usage_example">Usage example</string>
    <string name="examples">Examples</string>
    <string name="example_with_number">Example %1$d</string>
    <string name="pronounce">Pronounce</string>
    <string name="synonyms">Synonyms</string>
    <string name="no_alternatives">There are no Alternative Translations.</string>
    <string name="no_definitions">There are no Definitions.</string>
    <string name="no_examples">There are no Examples.</string>

    <string name="missing_translation_target_language_title">Attempted translation to</string>
    <string name="missing_translation_message">Translation is not available.\nClick button below to try again.</string>

    <string name="language_any">Any</string>
    <string name="language_auto">Detect language</string>
    <string name="language_unknown">Unknown</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
    <string name="language_german">German</string>
    <string name="language_french">French</string>
    <string name="language_italian">Italian</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_hindi">Hindi</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_korean">Korean</string>
    <string name="language_japanese">Japanese</string>

    <string name="settings">Settings</string>
    <string name="translation_sending">Translation sending</string>
    <string name="send_translations">Send translations</string>
    <string name="send_translations_summary">Send notifications with translations</string>
    <string name="sending_interval">Sending interval</string>
    <string name="interval_minutes_1">1 Minute</string>
    <string name="interval_minutes_2">2 Minutes</string>
    <string name="interval_hours_3">3 Hours</string>
    <string name="interval_hours_6">6 Hours</string>
    <string name="interval_hours_12">12 Hours</string>

    <string name="translation_notification_title">Do you know how this translates?</string>
</resources>