<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_half_normal"
    android:paddingBottom="@dimen/padding_half_normal"
    android:paddingHorizontal="@dimen/padding_normal">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBottomSheetTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/organize_translations"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSortByTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/sort_by"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/tvBottomSheetTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/tvSortByTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:checked="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSourceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_text" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbTranslationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translation_text" />

    </RadioGroup>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerSortBy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbDescending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/descending"
        app:layout_constraintTop_toBottomOf="@id/dividerSortBy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFilerByTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:text="@string/filter_by"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toBottomOf="@id/cbDescending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/source_language"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toTopOf="@id/spSourceLanguage"
        app:layout_constraintBottom_toBottomOf="@id/spSourceLanguage"
        app:layout_constraintStart_toStartOf="@id/tvFilerByTitle"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintHorizontal_bias="1.0" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:text="@string/target_language"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toTopOf="@id/spTargetLanguage"
        app:layout_constraintBottom_toBottomOf="@id/spTargetLanguage"
        app:layout_constraintStart_toStartOf="@id/tvFilerByTitle"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintHorizontal_bias="1.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end" />

    <Spinner
        android:id="@+id/spSourceLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/tvFilerByTitle"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_language_spinner" />

    <Spinner
        android:id="@+id/spTargetLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/spSourceLanguage"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_language_spinner" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/spTargetLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/reset"
        app:icon="@drawable/icon_reset"
        app:iconGravity="start"
        app:layout_constraintTop_toBottomOf="@id/dividerReset"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>