<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbTranslation"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/translate"
        app:navigationIcon="@drawable/icon_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/et_source_hint"
        app:layout_constraintTop_toBottomOf="@id/tbTranslation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSourceLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/language_from"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/spSourceLanguage"
        app:layout_constraintBottom_toBottomOf="@id/spSourceLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/barrier" />

    <TextView
        android:id="@+id/tvTargetLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/language_to"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/spTargetLanguage"
        app:layout_constraintBottom_toBottomOf="@id/spTargetLanguage"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end" />

    <Spinner
        android:id="@+id/spSourceLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/etSource"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/language_spinner_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSwapLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/btn_swap_languages"
        app:icon="@drawable/swap_icon"
        app:iconGravity="start"
        app:layout_constraintTop_toBottomOf="@id/spSourceLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.Button.OutlinedButton" />

    <Spinner
        android:id="@+id/spTargetLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnSwapLanguages"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/language_spinner_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/btn_translate"
        app:layout_constraintTop_toBottomOf="@id/spTargetLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>